--- a/index.html
+++ b/index.html
@@ -6,9 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fire base</title>
 </head>
-<body>
-    <h1 align="center">fireuiuiu</h1>
-    
+<body align="center">
+    <!-- <h1 align="center">fireuiuiu</h1> -->
+    <hr>
+    <h1>Student DataBase</h1>
+    <hr><br>
+    <label for="name">Name :</label>
+    <input type="text" id="name">
+    <br><br>
+    <label for="roll">Roll no :</label>
+    <input type="text" id="roll">
+    <br><br>
+    <label for="branch">Branch :</label>
+    <input type="text" id="branch">
+    <br><br>
+    <label for="dob">DOB :</label>
+    <input type="text" id="dob">
+    <br><br>
+    <button id="insert">insert</button>
+    <button id="update">update</button>
+    <button id="read">read</button>
+    <button id="delete">delete</button>
+
+    <div id="tb"></div>
+
 
     <script src="script.js" type="module"></script>
 </body>
